@@ -8,7 +8,7 @@
 
   <groupId>vavi</groupId>
   <artifactId>vavi-sound-sandbox</artifactId>
-  <version>1.0.9</version>
+  <version>1.0.10</version>
 
   <name>Vavi Sound API (Sandbox)</name>
   <url>https://github.com/umjammer/vavi-sound-sandbox</url>
@@ -92,6 +92,86 @@
         </plugins>
       </build>
     </profile>
+
+    <profile>
+      <id>local (not on ci)</id>
+      <activation>
+        <property>
+          <name>!env.GITHUB_WORKFLOW</name>
+        </property>
+      </activation>
+      <properties>
+        <javaVersion>21</javaVersion>
+      </properties>
+      <pluginRepositories>
+        <pluginRepository>
+          <id>jitpack.io</id>
+          <url>https://jitpack.io</url>
+        </pluginRepository>
+      </pluginRepositories>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>com.github.umjammer</groupId>
+            <artifactId>careless-maven-plugin</artifactId>
+            <version>0.0.2</version>
+            <executions>
+              <execution>
+                <phase>validate</phase>
+                <goals>
+                  <goal>careless</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <targets>
+                <target>
+                  <path>.github/workflows/codeql-analysis.yml</path>
+                  <ri>jobs.analyze.steps[2].name</ri>
+                  <value>Set up JDK ${javaVersion}</value>
+                </target>
+                <target>
+                  <path>.github/workflows/codeql-analysis.yml</path>
+                  <ri>jobs.analyze.steps[2].with.java-version</ri>
+                  <value>${javaVersion}</value>
+                </target>
+                <target>
+                  <path>.github/workflows/maven.yml</path>
+                  <ri>jobs.build.steps[2].name</ri>
+                  <value>Set up JDK ${javaVersion}</value>
+                </target>
+                <target>
+                  <path>.github/workflows/maven.yml</path>
+                  <ri>jobs.build.steps[2].with.java-version</ri>
+                  <value>${javaVersion}</value>
+                </target>
+                <target>
+                  <path>pom.xml</path>
+                  <ri>//*[local-name()='artifactId' and text()='maven-compiler-plugin']/..//*[local-name()='release' or local-name()='source']/text()</ri>
+                  <value>${javaVersion}</value>
+                </target>
+                <target>
+                  <path>jitpack.yml</path>
+                  <ri>jdk[0]</ri>
+                  <value>openjdk${javaVersion}</value>
+                </target>
+                <target>
+                  <path>README.md</path>
+                  <ri>img\.shields\.io\/badge\/Java-(\d+?)-b07219</ri>
+                  <value>${javaVersion}</value>
+                </target>
+                <target>
+                  <path>pom.xml</path>
+                  <ri>//*[local-name()='project']/*[local-name()='version']/text()</ri>
+                  <value>.*-SNAPSHOT</value>
+                  <negative>true</negative>
+                </target>
+              </targets>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
   </profiles>
 
   <build>
@@ -104,9 +184,10 @@
           <source>21</source> <!-- TODO release causes compilation failure why? -->
           <target>21</target>
           <compilerArgs>
-            <arg>--add-modules=jdk.incubator.vector</arg>
             <arg>--add-exports</arg>
             <arg>java.desktop/com.sun.media.sound=ALL-UNNAMED</arg>
+            <arg>--add-exports</arg>
+            <arg>java.base/sun.nio.ch=ALL-UNNAMED</arg>
           </compilerArgs>
           <!-- https://stackoverflow.com/a/30472473 -->
           <fork>true</fork>
@@ -155,8 +236,9 @@
         <configuration>
           <argLine>
             -Xmx4G
-            --add-modules jdk.incubator.vector
-            --add-exports java.desktop/com.sun.media.sound=ALL-UNNAMED
+            --add-exports=java.desktop/com.sun.media.sound=ALL-UNNAMED
+            --add-opens=java.base/java.io=ALL-UNNAMED
+            --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
             -javaagent:${project.build.directory}/vavi-instrumentation.jar
             -Dvavix.lang.instrumentation.VaviInstrumentation.1=vavix.lang.instrumentation.PropertiesClassFileTransformer
             -Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties
@@ -255,7 +337,7 @@
     <dependency>
       <groupId>com.github.umjammer</groupId> <!-- vavi / com.github.umjammer -->
       <artifactId>vavi-sound</artifactId>
-      <version>1.0.19</version>
+      <version>1.0.20</version>
       <exclusions>
         <exclusion>
           <groupId>com.github.umjammer</groupId>
@@ -372,7 +454,7 @@
     <dependency>
       <groupId>com.github.umjammer</groupId> <!-- drogatkin / com.github.umjammer -->
       <artifactId>vavi-sound-flac</artifactId>
-      <version>0.0.6</version>
+      <version>0.0.7</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -448,9 +530,9 @@
     </dependency>
 
     <dependency>
-      <groupId>com.github.umjammer</groupId> <!-- com.github.umjammer -->
+      <groupId>com.github.umjammer</groupId> <!-- com.github.umjammer / vavi -->
       <artifactId>vavi-util-screenscraping</artifactId>
-      <version>1.0.14</version>
+      <version>1.0.15</version>
       <scope>test</scope>
     </dependency>
 
@@ -464,7 +546,7 @@
     <dependency>
       <groupId>com.github.umjammer.vavi-commons</groupId>
       <artifactId>vavi-instrumentation</artifactId>
-      <version>1.1.12</version>
+      <version>1.1.14</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
